[gd_scene load_steps=4 format=3 uid="uid://brgk7hbafjxc1"]

[ext_resource type="Script" uid="uid://b05j4u1bobt5c" path="res://UI/victory_menu.gd" id="1_00p7t"]
[ext_resource type="Theme" uid="uid://bafvueoykssky" path="res://UI/WIPGame_theme.tres" id="1_52j3o"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_00p7t"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 8
border_width_top = 8
border_width_right = 8
border_width_bottom = 8
border_color = Color(1, 1, 1, 1)
expand_margin_left = 5.0
expand_margin_top = 5.0
expand_margin_right = 5.0
expand_margin_bottom = 5.0

[node name="VictoryMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_00p7t")

[node name="VictoryMenuPanel" type="PanelContainer" parent="."]
layout_mode = 0
offset_right = 300.0
offset_bottom = 200.0
theme_override_styles/panel = SubResource("StyleBoxFlat_00p7t")

[node name="VBoxContainer" type="VBoxContainer" parent="VictoryMenuPanel"]
layout_mode = 2

[node name="Label" type="Label" parent="VictoryMenuPanel/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_52j3o")
theme_override_font_sizes/font_size = 30
text = "You Win!"
horizontal_alignment = 1

[node name="Menu" type="Button" parent="VictoryMenuPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
theme = ExtResource("1_52j3o")
theme_override_font_sizes/font_size = 15
text = "Menu"

[node name="Retry" type="Button" parent="VictoryMenuPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 2
theme = ExtResource("1_52j3o")
theme_override_font_sizes/font_size = 15
text = "Retry"

[connection signal="pressed" from="VictoryMenuPanel/VBoxContainer/Menu" to="." method="_on_menu_pressed"]
[connection signal="pressed" from="VictoryMenuPanel/VBoxContainer/Retry" to="." method="_on_retry_pressed"]
